# Simple-web-app

./: Dockerfile  README.md  main.py  pyproject.toml
storage/: data.json
